# qbittorrent-mcp-rs

./: .env  .env.enc  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yaml  config.toml.example  coverage.txt  qbittorrent-mcp-rs
.gemini/commands/: build-fix.toml  release-summary.toml  test-fix.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: mcp-rules.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_functionality/: plan.md
conductor/archive/app_preferences/: spec.md
conductor/archive/categories_tags/: spec.md
conductor/archive/ci_docker_integration_20260126/: plan.md
conductor/archive/code_coverage_20260213/: index.md  plan.md  spec.md
conductor/archive/comprehensive_testing/: plan.md  report.md  spec.md
conductor/archive/core_foundation_20260123/: index.md  metadata.json
conductor/archive/coverage_90_coveralls_20260213/: plan.md
conductor/archive/docker_integration_20260126/: plan.md
conductor/archive/global_transfer_control/: spec.md
conductor/archive/log_inspection/: spec.md
conductor/archive/mcp_best_practices_20260212/: plan.md
conductor/archive/mcp_optimization_20260215/: plan.md  spec.md
conductor/archive/release_summary_20260213/: spec.md
conductor/archive/rss_management/: plan.md
conductor/archive/torrent_inspection/: plan.md  spec.md
conductor/archive/utility_tools/: plan.md  spec.md
conductor/tracks/advanced_functionality/: plan.md  spec.md
conductor/tracks/app_preferences/: metadata.json  plan.md
conductor/tracks/categories_tags/: metadata.json  plan.md
conductor/tracks/ci_docker_integration_20260126/: plan.md  spec.md
conductor/tracks/code_coverage_20260213/: plan.md
conductor/tracks/core_foundation_20260123/: plan.md  spec.md
conductor/tracks/coverage_90_coveralls_20260213/: index.md  plan.md  spec.md
conductor/tracks/docker_integration_20260126/: index.md  plan.md  spec.md
conductor/tracks/feature_expansion_20260126/: plan.md
conductor/tracks/gemini_extension_20260212/: index.md  plan.md  spec.md
conductor/tracks/global_transfer_control/: metadata.json  plan.md
conductor/tracks/http_mode_testing_20260213/: index.md  plan.md  spec.md
conductor/tracks/log_inspection/: metadata.json  plan.md
conductor/tracks/mcp_best_practices_20260212/: index.md  plan.md  spec.md
conductor/tracks/mcp_optimization_20260215/: plan.md
conductor/tracks/release_summary_20260213/: index.md  plan.md
conductor/tracks/rss_management/: metadata.json  plan.md  spec.md
conductor/tracks/search_functionality/: metadata.json  plan.md  spec.md
conductor/tracks/search_plugins/: metadata.json  plan.md  spec.md
src/: app.rs  check_stdio.rs  client.rs  config.rs  lib.rs  main.rs  models.rs
src/server/: handler.rs  http.rs  mcp.rs  mod.rs  stdio.rs
tests/: app_test.rs  client_advanced_test.rs  client_app_test.rs  client_categories_test.rs  client_coverage_expansion_test.rs  client_error_test.rs  client_inspection_test.rs  client_log_test.rs  client_management_test.rs  client_rss_test.rs  client_search_plugins_test.rs  client_search_test.rs  client_test.rs  client_torrent_limits_test.rs  client_transfer_test.rs  config_test.rs  docker_integration_test.rs  http_integration_test.rs  main_coverage_test.rs  main_test.rs  mcp_logic_test.rs  mcp_resource_test.rs  real_instance_test.rs  stdio_integration_test.rs  stdio_test.rs  test_range_detection.sh
tests/resources/: qBittorrent.conf  set-password.sh
(+11 files in other folders)
