[package]
name = "qbittorrent-mcp-rs"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["cookies", "form", "json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
regex = "1.11.1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3.24.0"
testcontainers = "0.26.3"
wiremock = "0.6.5"

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)